fix(ui): Java 17 compliance + fabric/forge modules compile
- Convert Java 21 pattern-switches to instanceof chains (ConfigTable x2,
  TableRow.of, WidgetConfigOption x2, WidgetTableEditEntry) and record
  deconstruction in TableRow.equals
- common release 21 -> 17 (MC 1.20.1 requires <=61 class files)
- List.getFirst() -> get(0); qualified enum case labels -> unqualified
- Drop orphaned FabricNetworkHelper + service file, fabric datagen pkg
  and entrypoint (tags ship via datapack zip)
- CodecsWrap.listOrSingle: explicit type witnesses for forge javac

:fabric:compileJava / :forge:compileJava both green

Co-authored-by: sayukishiraishi@gmail.com